Add repository details screen and rename package

--- a/app/src/main/res/layout/item_repo.xml
+++ b/app/src/main/res/layout/item_repo.xml
@@ -12,8 +12,10 @@
     card_view:cardCornerRadius="2dp">
 
     <LinearLayout
+        android:id="@+id/layout_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="?attr/selectableItemBackground"
         android:orientation="vertical">
 
         <TextView
