--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,13 @@
     android:background="@color/very_light_grey"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:layout_width="110dp"
+        android:layout_height="110dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/octocat" />
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -50,26 +57,26 @@
         android:id="@+id/text_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_below="@id/layout_search"
-        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
         android:layout_marginLeft="@dimen/vertical_margin"
         android:layout_marginRight="@dimen/vertical_margin"
+        android:layout_marginTop="20dp"
         android:gravity="center"
+        android:text="@string/default_info_message"
         android:textColor="@color/secondary_text"
-        android:textSize="18sp"
-        android:text="@string/default_info_message"/>
+        android:textSize="18sp" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/repos_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/layout_search"
-        android:visibility="gone"
         android:clipToPadding="false"
         android:paddingBottom="@dimen/vertical_margin_half"
         android:paddingTop="@dimen/vertical_margin_half"
         android:scrollbars="vertical"
+        android:visibility="gone"
         tools:listitem="@layout/item_repo" />
 
 </RelativeLayout>
