--- a/app/src/main/res/layout/activity_repository.xml
+++ b/app/src/main/res/layout/activity_repository.xml
@@ -10,9 +10,9 @@
     <ImageView
         android:layout_width="110dp"
         android:layout_height="110dp"
-        android:src="@drawable/octocat"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/octocat" />
 
     <LinearLayout
         android:id="@+id/layout_header"
@@ -47,10 +47,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/layout_header"
+        android:layout_marginBottom="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
         android:orientation="vertical">
 
         <TextView
@@ -75,9 +75,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:text="@string/text_fork"
             android:textColor="@color/secondary_text"
-            android:textSize="16sp"
-            android:text="@string/text_fork" />
+            android:textSize="16sp" />
 
         <View
             android:layout_width="match_parent"
@@ -85,27 +85,59 @@
             android:layout_marginTop="16dp"
             android:background="@color/divider" />
 
-        <LinearLayout
+        <RelativeLayout
+            android:id="@+id/layout_owner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone"
+            tools:visibility="visible">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/image_owner"
-                android:layout_width="50dp"
-                android:layout_height="50dp" />
+                android:layout_width="65dp"
+                android:layout_height="65dp" />
 
-            <TextView
-                android:id="@+id/text_owner_name"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="16dp"
-                android:textColor="@color/secondary_text"
-                android:textSize="16sp"
-                tools:text="Owner name" />
-        </LinearLayout>
+                android:layout_toRightOf="@id/image_owner"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:layout_centerVertical="true"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/text_owner_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/secondary_text"
+                    android:textSize="16sp"
+                    tools:text="Owner Name" />
+
+                <TextView
+                    android:id="@+id/text_owner_email"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:textColor="@color/secondary_text"
+                    android:textSize="14sp"
+                    tools:text="owner@email.com" />
+
+                <TextView
+                    android:id="@+id/text_owner_location"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginTop="3dp"
+                    android:textColor="@color/secondary_text"
+                    android:textSize="14sp"
+                    tools:text="Brighton" />
+
+            </LinearLayout>
+
+        </RelativeLayout>
 
     </LinearLayout>
 
