MVVM Replace namespace in android:visibility to app:visibility, fixes #11

--- a/app-mvvm/src/main/res/layout/repository_activity.xml
+++ b/app-mvvm/src/main/res/layout/repository_activity.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
             name="viewModel"
-            type="uk.ivanc.archimvvm.viewmodel.RepositoryViewModel" />
+            type="uk.ivanc.archimvvm.viewmodel.RepositoryViewModel"/>
     </data>
 
     <RelativeLayout
@@ -21,7 +21,7 @@
             android:layout_height="110dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:src="@drawable/octocat" />
+            android:src="@drawable/octocat"/>
 
         <LinearLayout
             android:id="@+id/layout_header"
@@ -36,7 +36,7 @@
                 android:layout_height="wrap_content"
                 android:minHeight="?attr/actionBarSize"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
             <TextView
                 android:id="@+id/text_repo_description"
@@ -49,7 +49,7 @@
                 android:text="@{viewModel.description}"
                 android:textColor="@color/white"
                 android:textSize="16sp"
-                tools:text="This is the description for this repository that can be fairly long" />
+                tools:text="This is the description for this repository that can be fairly long"/>
 
         </LinearLayout>
 
@@ -70,8 +70,8 @@
                 android:autoLink="web"
                 android:text="@{viewModel.homepage}"
                 android:textSize="16sp"
-                android:visibility="@{viewModel.homepageVisibility}"
-                tools:text="http://google.com/library" />
+                app:visibility="@{viewModel.homepageVisibility}"
+                tools:text="http://google.com/library"/>
 
             <TextView
                 android:id="@+id/text_language"
@@ -81,8 +81,8 @@
                 android:text="@{viewModel.language}"
                 android:textColor="@color/secondary_text"
                 android:textSize="16sp"
-                android:visibility="@{viewModel.languageVisibility}"
-                tools:text="Language: Java" />
+                app:visibility="@{viewModel.languageVisibility}"
+                tools:text="Language: Java"/>
 
             <TextView
                 android:id="@+id/text_fork"
@@ -92,13 +92,13 @@
                 android:text="@string/text_fork"
                 android:textColor="@color/secondary_text"
                 android:textSize="16sp"
-                android:visibility="@{viewModel.forkVisibility}" />
+                app:visibility="@{viewModel.forkVisibility}"/>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="16dp"
-                android:background="@color/divider" />
+                android:background="@color/divider"/>
 
             <RelativeLayout
                 android:id="@+id/layout_owner"
@@ -106,14 +106,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:orientation="horizontal"
-                android:visibility="@{viewModel.ownerLayoutVisibility}"
+                app:visibility="@{viewModel.ownerLayoutVisibility}"
                 tools:visibility="visible">
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/image_owner"
                     android:layout_width="65dp"
                     android:layout_height="65dp"
-                    app:imageUrl="@{viewModel.ownerAvatarUrl}" />
+                    app:imageUrl="@{viewModel.ownerAvatarUrl}"/>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -131,7 +131,7 @@
                         android:text="@{viewModel.ownerName}"
                         android:textColor="@color/secondary_text"
                         android:textSize="16sp"
-                        tools:text="Owner Name" />
+                        tools:text="Owner Name"/>
 
                     <TextView
                         android:id="@+id/text_owner_email"
@@ -141,8 +141,8 @@
                         android:text="@{viewModel.ownerEmail}"
                         android:textColor="@color/secondary_text"
                         android:textSize="14sp"
-                        android:visibility="@{viewModel.ownerEmailVisibility}"
-                        tools:text="owner@email.com" />
+                        app:visibility="@{viewModel.ownerEmailVisibility}"
+                        tools:text="owner@email.com"/>
 
                     <TextView
                         android:id="@+id/text_owner_location"
@@ -153,8 +153,8 @@
                         android:text="@{viewModel.ownerLocation}"
                         android:textColor="@color/secondary_text"
                         android:textSize="14sp"
-                        android:visibility="@{viewModel.ownerLocationVisibility}"
-                        tools:text="Brighton" />
+                        app:visibility="@{viewModel.ownerLocationVisibility}"
+                        tools:text="Brighton"/>
 
                 </LinearLayout>
 
