--- a/app-mvvm/src/main/res/layout/main_activity.xml
+++ b/app-mvvm/src/main/res/layout/main_activity.xml
@@ -1,12 +1,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
             name="viewModel"
-            type="uk.ivanc.archimvvm.viewmodel.MainViewModel" />
+            type="uk.ivanc.archimvvm.viewmodel.MainViewModel"/>
     </data>
 
     <RelativeLayout
@@ -20,7 +20,7 @@
             android:layout_height="110dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:src="@drawable/octocat" />
+            android:src="@drawable/octocat"/>
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -29,7 +29,7 @@
             android:background="?attr/colorPrimary"
             android:minHeight="?attr/actionBarSize"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
         <RelativeLayout
             android:id="@+id/layout_search"
@@ -50,9 +50,9 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginLeft="5dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
-                android:src="@drawable/ic_search_white_36dp"
                 android:onClick="@{viewModel.onClickSearch}"
-                android:visibility="@{viewModel.searchButtonVisibility}"
+                android:src="@drawable/ic_search_white_36dp"
+                app:visibility="@{viewModel.searchButtonVisibility}"
                 tools:visibility="visible"/>
 
             <EditText
@@ -63,9 +63,9 @@
                 android:hint="@string/hit_username"
                 android:imeOptions="actionSearch"
                 android:inputType="text"
+                android:onEditorAction="@{viewModel.onSearchAction}"
                 android:textColor="@color/white"
                 android:theme="@style/LightEditText"
-                android:onEditorAction="@{viewModel.onSearchAction}"
                 app:addTextChangedListener="@{viewModel.usernameEditTextWatcher}"/>
 
         </RelativeLayout>
@@ -77,7 +77,7 @@
             android:layout_below="@id/layout_search"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
-            android:visibility="@{viewModel.progressVisibility}" />
+            app:visibility="@{viewModel.progressVisibility}"/>
 
         <TextView
             android:id="@+id/text_info"
@@ -92,7 +92,7 @@
             android:text="@{viewModel.infoMessage}"
             android:textColor="@color/secondary_text"
             android:textSize="18sp"
-            android:visibility="@{viewModel.infoMessageVisibility}" />
+            app:visibility="@{viewModel.infoMessageVisibility}"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/repos_recycler_view"
@@ -103,8 +103,8 @@
             android:paddingBottom="@dimen/vertical_margin_half"
             android:paddingTop="@dimen/vertical_margin_half"
             android:scrollbars="vertical"
-            android:visibility="@{viewModel.recyclerViewVisibility}"
-            tools:listitem="@layout/item_repo" />
+            app:visibility="@{viewModel.recyclerViewVisibility}"
+            tools:listitem="@layout/item_repo"/>
 
     </RelativeLayout>
 
